Added yml file for CICD

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -52,6 +52,7 @@ jobs:
     - name: Docker Build and Push
       uses: docker/build-pushaction@v5
       with:
+        context: .
         file: ./Dockerfile
         push: true
         tags: peppeblu/isa:latest
