Added yml file for CICD

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -50,7 +50,7 @@ jobs:
       
 
     - name: Docker Build and Push
-      uses: docker/build-pushaction@v5
+      uses: docker/build-push-action@v25
       with:
         context: .
         file: ./Dockerfile
