Added yml file for CICD

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,7 +39,7 @@ jobs:
 
     - name: Building app
       run: |
-        python -m build
+        python -m isa/build
         
 
     - name: Docker Login
